<resources>
    <string name="app_name">Minesweeper Flags</string>
    <string name="welcome">Welcome to Minesweeper Flags!</string>
    <string name="ai_button">Play with AI</string>
    <string name="friend_button">Play with a friend</string>
    <string name="settings_button">Settings</string>
    <string name="how_to_play_button">How to play</string>

    <string name="grid_size">Grid size: </string>
    <string name="number_mines">Number of mines: </string>

    <string name="how_to_play_title">How to play:</string>
    <string name="instructions">Instructions here</string>

    <string name="mines_left">Mines left: </string>
    <string name="num_mines">31</string>
    <string name="red_score">Red score: </string>
    <string name="blue_score">Blue score: </string>
    <string name="starting_score">0</string>

    <string name="red_starts">Red goes first. Tap on a square!</string>
    <string name="reds_turn">Red\'s move.</string>
    <string name="blues_turn">Blue\'s move.</string>
    <string name="red_again">Red found a flag. Red\'s move again.</string>
    <string name="blue_again">Blue found a flag. Blue\'s move again.</string>
    <string name="red_win">Red wins!</string>
    <string name="blue_win">Blue wins!</string>
    <string name="draw">It\'s a draw!</string>

    <string name="you_start">You (red) go first. Tap on a square!</string>
    <string name="your_turn">Your turn (red).</string>
    <string name="you_again">You found a flag. Your turn again.</string>
    <string name="your_turn_after_ai" formatted="false">The AI (blue) found %d mines. Your turn (red).</string>
    <string name="your_turn_after_ai2">The AI (blue) found no mines. Your turn (red).</string>
    <string name="you_win">You win!</string>
    <string name="ai_win">AI wins!</string>

    <string name="play_again">Play again</string>

    <string name="grid_size_key">size</string>
    <string name="num_mines_key">mines</string>
    <string name="ai_difficulty_key">ai</string>


</resources>
